--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "cSpell.enabled": false
+    "cSpell.enabled": false,
+    "files.associations": {
+        "*.embeddedhtml": "html",
+        "stdlib.h": "c",
+        "link_layer.h": "c"
+    }
 }
